code cleanups in AbstractEntityPersister